<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_voice"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/tab_voice" />
    <item
        android:id="@+id/nav_monitor"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/tab_monitor" />
    <item
        android:id="@+id/nav_trigger"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/tab_trigger" />
    <item
        android:id="@+id/nav_audio_library"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_audio_library" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/tab_settings" />
</menu>
